<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    tools:context=".ui.fragment.HomeFragment">

    <ImageView
        android:id="@+id/home__img__logout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/horizontal_space"
        android:background="@drawable/bg_share"
        android:padding="@dimen/radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home__img__share"
        android:src="@drawable/ic_cloud_white" />

    <ImageView
        android:id="@+id/home__img__share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space"
        android:layout_marginEnd="@dimen/horizontal_space"
        android:background="@drawable/bg_share"
        android:padding="@dimen/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home__guideline__top"
        app:layout_constraintVertical_chainStyle="packed"
        android:src="@drawable/ic_share_white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home__container__logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_icon_space"
        app:layout_constraintBottom_toTopOf="@id/home__container__select_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home__guideline__top"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.cardview.widget.CardView
            android:id="@+id/splash_screen__container__2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/color_2"
            android:elevation="16dp"
            app:layout_constraintBottom_toTopOf="@id/splash_screen__container__4"
            app:layout_constraintEnd_toStartOf="@id/splash_screen__container__0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                style="@style/TitleTextGrey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/home__2" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/splash_screen__container__0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/color_64"
            android:elevation="16dp"
            app:layout_constraintBottom_toTopOf="@id/splash_screen__container__8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/splash_screen__container__2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                style="@style/TitleTextWhite"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/home__0" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/splash_screen__container__4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/color_4"
            android:elevation="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/splash_screen__container__8"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_screen__container__2">

            <TextView
                style="@style/TitleTextGrey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/home__4" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/splash_screen__container__8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:backgroundTint="@color/color_8"
            android:elevation="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/splash_screen__container__4"
            app:layout_constraintTop_toBottomOf="@id/splash_screen__container__0">


            <TextView
                style="@style/TitleTextWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/home__8" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/home__container__select_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_space"
        app:layout_constraintBottom_toTopOf="@id/home__label__high_score"
        app:layout_constraintEnd_toStartOf="@id/home__guideline__end"
        app:layout_constraintStart_toEndOf="@id/home__guideline__start"
        app:layout_constraintTop_toBottomOf="@id/home__container__logo">

        <ImageView
            android:id="@+id/home__img__back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:id="@+id/home__label__level"
            style="@style/NoToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            tools:text="3 x 3" />

        <ImageView
            android:id="@+id/home__img__next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_next_black" />
    </FrameLayout>

    <TextView
        android:id="@+id/home__label__high_score"
        style="@style/NoToolbarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_space"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/home__btn__go"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home__container__select_level"
        tools:text="High Score: 0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home__btn__go"
        style="@style/MainFilledBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/vertical_space"
        android:paddingHorizontal="@dimen/horizontal_space"
        android:text="@string/home__go"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/home__btn__show_statistics"
        app:layout_constraintEnd_toStartOf="@id/home__guideline__end"
        app:layout_constraintStart_toEndOf="@id/home__guideline__start"
        app:layout_constraintTop_toBottomOf="@id/home__label__high_score" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home__btn__show_statistics"
        style="@style/MainFilledBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_space"
        android:paddingHorizontal="@dimen/horizontal_space"
        android:text="@string/home__show_statistics"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/home__btn__achievements"
        app:layout_constraintEnd_toStartOf="@id/home__guideline__end"
        app:layout_constraintStart_toEndOf="@id/home__guideline__start"
        app:layout_constraintTop_toBottomOf="@id/home__btn__go" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home__btn__achievements"
        style="@style/MainFilledBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_space"
        android:text="@string/home__achievements"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/home__guideline__end"
        app:layout_constraintStart_toEndOf="@id/home__guideline__start"
        app:layout_constraintTop_toBottomOf="@id/home__btn__show_statistics" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home__guideline__start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home__guideline__end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/home__guideline__top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>